# mensa-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  meals.sqlite
.github/workflows/: docker-image.yml
src/: campus_request_funcs.rs  constants.rs  cronjobs.rs  db_operations.rs  main.rs  openmensa_funcs.rs  routes.rs  services.rs  stuwe_request_funcs.rs  types.rs
