[package]
name = "mensa-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.204", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum = { version = "0.7.5", features = ["ws"] }
serde_json = "1.0.121"
scraper = "0.20.0"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0.86"
tower-http = { version = "0.6.1", features = ["cors"] }
http = "1.1.0"
rusqlite = "0.32.1"
tokio-cron-scheduler = "0.13.0"
pretty_env_logger = "0.5.0"
log = "0.4.22"
lazy_static = "1.5.0"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
